<resources>
    <!-- Strings de telas -->
    <!-- Tela principal -->
    <string name="app_name">Lista de Compras</string>
    <string name="text_view_lista">Fazer Lista</string>
    <string name="text_view_compras">Fazer Compras</string>

    <!-- Tela de listas -->
    <string name="title_activity_lista">Lista de Compras</string>
    <string name="adionar_item">Adicionar item</string>

    <!-- Tela de compras -->
    <string name="title_activity_compras">Compras</string>
    <string name="limite_compras">Meta:" "</string>
    <string name="soma_das_compras">Total:" "</string>
    <string name="finalizar_compras">Finalizar</string>
    <string name="valor_avulso">Valor avulso:" "</string>

    <!-- Tela de adicionar itens -->
    <string name="nome_item">Nome do item</string>
    <string name="categoria_item">Selecione a categoria do item: </string>
    <string name="cat_condimentos">Condimentos e temperos</string>
    <string name="cat_bolacha">Bolachas e pães</string>
    <string name="cat_frios">Frios e carnes</string>
    <string name="cat_higiene">Higiene e limpeza</string>
    <string name="cat_outros">Outros</string>
    <string name="quant_item">Quantidade: </string>
    <string name="preco_item">Preço: </string>
    <string name="salvar_lista">Salvar lista</string>
    <string name="dialog_adicionado">O item foi adicionado!</string>

    <!-- Tela de configurações -->
    <string name="text_valor_limite">Valor limite para compras: </string>
    <string name="text_fazer_backup">Fazer backup dos dados</string>
    <string name="text_restaurar_backup">Restaurar dados</string>

    <!-- Adapter de item da lista -->
    <string name="text_quant">Qt.</string>

    <!-- Gerais -->
    <string name="text_rs">R$" "</string>
    <string name="hint_valor">0,00</string>
</resources>