<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarItem">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/nome_item"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:text="@string/categoria_item"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <RadioGroup
        android:id="@+id/radioCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoria">

        <RadioButton
            android:id="@+id/radioButtonCond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_condimentos" />

        <RadioButton
            android:id="@+id/radioButtonBol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_bolacha" />

        <RadioButton
            android:id="@+id/radioButtonFrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_frios" />

        <RadioButton
            android:id="@+id/radioButtonHigi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_higiene" />
    </RadioGroup>

    <TextView
        android:id="@+id/textQuant"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/quant_item"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/botao_menos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioCategoria" />

    <Button
        android:id="@+id/botao_menos"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/minus"
        android:onClick="rmItens"
        app:layout_constraintEnd_toStartOf="@+id/quantidade"
        app:layout_constraintTop_toBottomOf="@+id/radioCategoria" />

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/botao_mais"
        app:layout_constraintTop_toBottomOf="@+id/radioCategoria" />

    <Button
        android:id="@+id/botao_mais"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/plus_symbol_round_button"
        android:onClick="addItens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioCategoria" />

    <TextView
        android:id="@+id/preco"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/preco_item"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editPreco"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuant" />

    <EditText
        android:id="@+id/editPreco"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="0,00"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantidade" />

    <Button
        android:id="@+id/botao_salvar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="adicionarItem"
        android:text="@string/adionar_item"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preco" />

</androidx.constraintlayout.widget.ConstraintLayout>